--- a/gimnasio/inicio/templates/inicio/about.html
+++ b/gimnasio/inicio/templates/inicio/about.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="about-content">
             <div class="about-image">
-                <img src="{% static 'inicio/img/foto1.jpg' %}" alt="Historia del gimnasio">
+                <img src="{% static 'inicio/img/fotogymhistoria.jpg' %}" alt="Historia del gimnasio">
 
             </div>
             <div class="about-text">
